@@ -1,3 +1,4 @@
+* Make graph works also with datetime
 * Add edition on Many2Many
 * Fix open in csv export to use file actions
 * Update client labels at language change
